// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component Footer Footer renders correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "marginHorizontal": 22,
      "marginTop": 20,
    }
  }
>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginHorizontal": 10,
        "opacity": 1,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="ios-share-social-outline"
      size={17}
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginHorizontal": 10,
        "opacity": 1,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="block"
      size={17}
    />
  </View>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginHorizontal": 10,
        "opacity": 1,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="chat"
      size={17}
    />
  </View>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 20,
        "opacity": 1,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="arrow-up-bold-outline"
      size={17}
    />
  </View>
  <Text
    style={
      Object {
        "color": "#C4C4C4",
        "fontFamily": "Inter-Regular",
        "fontSize": 14,
        "marginHorizontal": 13,
      }
    }
  >
    0
  </Text>
  <View
    accessible={true}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="arrow-down-bold-outline"
      size={17}
    />
  </View>
</View>
`;

exports[`component Footer Footer snapshot 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "flex-end",
      "marginHorizontal": 22,
      "marginTop": 20,
    }
  }
>
  <ForwardRef
    style={
      Object {
        "marginHorizontal": 10,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="ios-share-social-outline"
      size={17}
    />
  </ForwardRef>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "marginHorizontal": 10,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="block"
      size={17}
    />
  </ForwardRef>
  <ForwardRef
    style={
      Object {
        "marginHorizontal": 10,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="chat"
      size={17}
    />
  </ForwardRef>
  <ForwardRef
    style={
      Object {
        "marginLeft": 20,
      }
    }
  >
    <Icon
      color="#C4C4C4"
      name="arrow-up-bold-outline"
      size={17}
    />
  </ForwardRef>
  <Text
    style={
      Object {
        "color": "#C4C4C4",
        "fontFamily": "Inter-Regular",
        "fontSize": 14,
        "marginHorizontal": 13,
      }
    }
  >
    0
  </Text>
  <ForwardRef>
    <Icon
      color="#C4C4C4"
      name="arrow-down-bold-outline"
      size={17}
    />
  </ForwardRef>
</View>
`;
